Tue Nov 26 04:12:10 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems:  Update to RubyGems master 612f85a.  Notable changes:

	  Fixed installation and activation of git: and path: gems via
	  Gem.use_gemdeps

	  Improved documentation coverage

	* test/rubygems:  ditto.

Mon Nov 25 22:23:03 2013  Zachary Scott  <e@zzak.io>

	* lib/xmlrpc.rb: [DOC] Fix link to xmlrpc4r site [Bug #9148]
	  Patch by Giorgos Tsiftsis

Mon Nov 25 19:48:10 2013  Zachary Scott  <e@zzak.io>

	* lib/uri/common.rb: [DOC] typo fixes by @vipulnsward [Fixes GH-456]
	  https://github.com/ruby/ruby/pull/456
	* lib/uri/generic.rb: [DOC] ditto.

Mon Nov 25 14:34:42 2013  Zachary Scott  <e@zzak.io>

	* ext/bigdecimal/bigdecimal.gemspec: bump BigDecimal to 1.2.3 for
	  proper release date in RubyGems

Mon Nov 25 14:25:08 2013  Zachary Scott  <e@zzak.io>

	* ext/bigdecimal/bigdecimal.gemspec: Remove Gem::Specification#date
	  We should rely on rubygems to create the date the gem was released
	  for each version.

Mon Nov 25 06:53:30 2013  Koichi Sasada  <ko1@atdot.net>

	* internal.h: do not use ruby_sized_xrealloc() and ruby_sized_xfree()
	  if HAVE_MALLOC_USABLE_SIZE (or _WIN32) is defined.

	  We don't need these function if malloc_usable_size() is available.

	* gc.c: catch up this change.

	* gc.c: define HAVE_MALLOC_USABLE_SIZE on _WIN32.

	* array.c (ary_resize_capa): do not use ruby_sized_xfree() with
	  local variable to avoid "unused local variable" warning.
	  This change only has few impact.

	* string.c (rb_str_resize): ditto.

Mon Nov 25 05:05:04 2013  Koichi Sasada  <ko1@atdot.net>

	* test/-ext-/tracepoint/test_tracepoint.rb: catch up GC.stat changes
	  at r43835.

Mon Nov 25 04:45:59 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c: continue to change OLDSPACE -> OLDMALLOC.
	  RGENGC_ESTIMATE_OLDSPACE -> RGENGC_ESTIMATE_OLDMALLOC.

	* gc.c: add a new major GC reason GPR_FLAG_MAJOR_BY_OLDMALLOC.

Mon Nov 25 04:16:09 2013  Koichi Sasada  <ko1@atdot.net>
